--- a/ttt.html
+++ b/ttt.html
@@ -7,7 +7,7 @@
 <style>
 
 #sr1,#sr2,#sr3,#sr4,#sr5,#sr6,#sr7 ,#nr1,#nr2{
-background-color:#cc0066;
+background-color:lightskyblue;
 height:50px;
 width:50px; 
 text-align:center;
